--- a/GraphQL API with Node.js and TypeScript/package.json
+++ b/GraphQL API with Node.js and TypeScript/package.json
@@ -8,7 +8,10 @@
     "build": "npm run generate && tsc",
     "start": "node dist/server.js",
     "dev": "npm run generate && ts-node-dev --respawn --transpile-only src/server.ts",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "graphql",
@@ -31,7 +34,11 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.11.0",
+    "jest": "^30.2.0",
+    "sqlite3": "^5.1.7",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
