--- a/GraphQL API with Node.js and TypeScript/package.json
+++ b/GraphQL API with Node.js and TypeScript/package.json
@@ -11,7 +11,9 @@
     "watch": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [
     "graphql",
@@ -37,6 +39,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.0",
     "jest": "^30.2.0",
+    "prettier": "^3.8.0",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
