--- a/GraphQL API with Node.js and TypeScript/package.json
+++ b/GraphQL API with Node.js and TypeScript/package.json
@@ -13,7 +13,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "graphql",
@@ -33,17 +35,23 @@
     "sequelize": "^6.37.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.0.0",
     "jest": "^30.2.0",
     "prettier": "^3.8.0",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.53.0"
   }
 }
