Update package.json in GraphQL API with Node.js and TypeScript

--- a/GraphQL API with Node.js and TypeScript/package.json
+++ b/GraphQL API with Node.js and TypeScript/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "check": "npm run lint && npm run format"
   },
   "keywords": [
     "graphql",
