--- a/GraphQL API with Node.js and TypeScript/.vscode/extensions.json
+++ b/GraphQL API with Node.js and TypeScript/.vscode/extensions.json
@@ -1,3 +1,10 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "dbaeumer.vscode-eslint"]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "graphql.vscode-graphql",
+    "graphql.vscode-graphql-syntax",
+    "github.vscode-github-actions",
+    "orta.vscode-jest"
+  ]
 }
