Add Author Model to codegen.yml in GraphQL API with Node.js and TypeScript

--- a/GraphQL API with Node.js and TypeScript/codegen.yml
+++ b/GraphQL API with Node.js and TypeScript/codegen.yml
@@ -10,3 +10,4 @@ generates:
       mappers:
         Book: '../models/Book#BookModel'
         User: '../models/User#UserModel'
+        Author: '../models/Author#AuthorModel'
